PostgreSQL install & TypeORM install

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,11 +1,27 @@
 version: '3'
 
 services:
-  db:
-    container_name: mongo-db
-    image: mongo:5.0.22
-    volumes:
-      - ./mongo:/data/db
-    ports:
-      - 27017:27017
+  postgres-db:
+    image: postgres:16.1
+    container_name: postgres-db
     restart: always
+    environment:
+      POSTGRES_DB: MedSyncDB
+      POSTGRES_USER: U2D8Bits
+      POSTGRES_PASSWORD: 8Bits
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - 5432:5432
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: u2d.8bits@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 8Bits
+    ports:
+      - 80:80
+    depends_on:
+      - postgres-db
