--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,25 +3,25 @@ version: "3.8"
 services:
 
   postgres:
-    image: postgres:16.1
+    image: postgres:15.1
     container_name: MedSyncDB
     restart: always
-    ports:
-      - "5432:5432"
     environment:
-      POSTGRES_DB: MedSyncDB
-      POSTGRES_USER: U2D8Bits
-      POSTGRES_PASSWORD: 8Bits
+      POSTGRES_DB: medsyncdb
+      POSTGRES_USER: pablo
+      POSTGRES_PASSWORD: lolxdxd12
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
     
 
-  pgadmin:
-    image:  dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: u2d.8bits@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: 8Bits
-    ports:
-      - "80:80"
-    depends_on:
-      - postgres
+  # pgadmin:
+  #   image:  dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: u2d.8bits@gmail.com
+  #     PGADMIN_DEFAULT_PASSWORD: 8Bits
+  #   ports:
+  #     - "80:80"
+  #   depends_on:
+  #     - postgres
