--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "primeng": "^17.14.1",
     "quill": "^2.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
